# Virtual-Layer-POC

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: bench_induction_gain.py  bench_latency_scaling.py  bench_memory_ceiling.py  latency_bench.py  resource_bench.py  statistical_bench.py  throughput_bench.py
requirements/: tests.txt
tests/: gauntlet_vld.py  test_dynamics_exploration.py  test_hardened_scrutiny.py  test_scrutiny.py  test_vld.py
tests/enhancements/: enhance_01_json_shunting.py  enhance_02_math_induction.py  enhance_03_os_archetypes.py  enhance_04_random_variety.py  enhance_05_framework_ghosting.py  enhance_06_numpy_manifolds.py  enhance_07_torch_ghosting.py  enhance_08_scipy_spectral.py  enhance_09_pandas_procedural.py  enhance_10_sqlite_ghost.py  enhance_11_cryptography_secrets.py  enhance_12_logging_signatures.py
tests/non_physical/: test_asymptotic_determinism.py  test_chaotic_sensitivity.py  test_ghost_mixing.py  test_googol_traversal.py  test_manifold_tiling.py  test_mcmc_boltzmann.py
tests/scenarios/: test_06_archetype_collision.py  test_07_googol_seek.py  test_08_manifold_scarring.py  test_10_oneshot_vortex.py  test_11_geodesic_flow.py  test_12_shunting.py  test_13_moduli_collapse.py  test_20_recursive_shunting.py  test_byzantine_consensus.py  test_exascale_search.py  test_ground_phase.py  test_llm_synthesis.py
tests/scrutiny/: test_01_v_orthogonality.py  test_02_g_tile_recurrence.py  test_matmul.py  (+9 more)
vld_sdk/: __init__.py  core.py  geometric.py  holographic.py  induction.py  matrix.py  vm.py
(+12 files in other folders)
